force-app/main/default/objects/Usage__c/Usage__c.object-meta.xml
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>