force-app/main/default/objects/Usage__c/fields/Allotted__c.field-meta.xml
<CustomField>
    <fullName>Allotted__c</fullName>
    <label>Allotted (V)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>