force-app/main/default/objects/Usage__c/fields/Allotted_D__c.field-meta.xml
<CustomField>
    <fullName>Allotted_D__c</fullName>
    <label>Allotted (D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>