force-app/main/default/objects/Usage__c/fields/Allotted_S__c.field-meta.xml
<CustomField>
    <fullName>Allotted_S__c</fullName>
    <label>Allotted (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>