force-app/main/default/objects/Usage__c/fields/Allotted_Usage__c.field-meta.xml
<CustomField>
    <fullName>Allotted_Usage__c</fullName>
    <description>Field used to store the total usage assigned for that subscriber in the plan.</description>
    <label>Allotted Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>