force-app/main/default/objects/Usage__c/fields/Current_Usage__c.field-meta.xml
<CustomField>
    <fullName>Current_Usage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to store the amount of usage for data, text, or talk. The Usage Type field will determine the type of usage this is.</description>
    <label>Current Usage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>