force-app/main/default/objects/Usage__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data (GB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>