force-app/main/default/objects/Usage__c/fields/Is_Unlimited_D__c.field-meta.xml
<CustomField>
    <fullName>Is_Unlimited_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unlimited (D)?</label>
    <type>Checkbox</type>
</CustomField>