force-app/main/default/objects/Usage__c/fields/Is_Unlimited_S__c.field-meta.xml
<CustomField>
    <fullName>Is_Unlimited_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unlimited (S)</label>
    <type>Checkbox</type>
</CustomField>