force-app/main/default/objects/Usage__c/fields/Is_Unlimited_V__c.field-meta.xml
<CustomField>
    <fullName>Is_Unlimited_V__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unlimited (V)?</label>
    <type>Checkbox</type>
</CustomField>