force-app/main/default/objects/Usage__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <label>SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>