force-app/main/default/objects/Usage__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Formula field to identify the unit of measure for this usage record depending on the usage type.</description>
    <formula>CASE(TEXT(Usage_Type__c),
&quot;Data&quot;, &quot;GB&quot;,
&quot;Text&quot;, &quot;SMS&quot;,
&quot;Talk&quot;, &quot;Minutes&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>