force-app/main/default/objects/Usage__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <description>Type of usage for this record. Values can be Data, Text, Talk</description>
    <label>Usage Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Talk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>