force-app/main/default/objects/Usage__c/fields/Voice_Mins__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mins__c</fullName>
    <label>Voice (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>