force-app/main/default/objects/Usage__c/listViews/LWC_Usage.listView-meta.xml
<ListView>
    <fullName>LWC_Usage</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Current_Usage__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Allotted_Usage__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>LWC Usage</label>
</ListView>